<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/rankTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textStyle="italic"
                android:textSize="14sp"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/classificationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classification"
                android:textStyle="italic"
                android:textSize="14sp"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/createdTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textStyle="italic"
                android:textSize="14sp"
                android:padding="2dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>